<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNewTask">


    <TextView
        android:textSize="50sp"

        android:text="@string/title_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id = "@+id/task_enter_title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/enter_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/enter_description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/enter_urgency_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Spinner
        android:entries= "@array/urgency_field_contents"
        android:id="@+id/task_Enter_Urgency_Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="onSubmitPressed"
        android:text="@string/submit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>
