<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.todolist.ToDoTask">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle ="italic"
        android:textSize ="70sp"
        android:text = "@string/greetings_name" />

    <Button
        android:onClick="onNewTaskClicked"
        android:textSize="@dimen/activity_horizontal_margin"
        android:text= "@string/button_name"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="100sp" />

    <Button
        android:onClick="onNewTaskView"
        android:textSize="@dimen/activity_horizontal_margin"
        android:text="@string/view_all_task"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="100sp" />
</LinearLayout>
